--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>idreeskhan.github.io</title>
+    <title>Idrees Khan</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/idreeskhan">View on GitHub</a>
 
-          <h1 id="project_title">idreeskhan.github.io</h1>
-          <h2 id="project_tagline">Idrees Khan</h2>
+          <h1 id="project_title">Idrees Khan</h1>
+          <h2 id="project_tagline">Student, Programmer, Film & Puzzle Hobbyist</h2>
 
         </header>
     </div>
