--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
 
           <h1 id="project_title">Idrees Khan</h1>
-          <h2 id="project_tagline">Some kid from Toronto</h2>
+          <h2 id="project_tagline">Toronto-based Software Developer</h2>
 
         </header>
     </div>
@@ -29,7 +29,7 @@
         <h3>
 <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
 
-<p>This domain is solely used for personal purposes.</p>
+<p>This domain is primarily used for personal purposes.</p>
 
 <p><a href="https://github.com/idreeskhan" class="user-mention">@idreeskhan</a>, Copyright (c) 2014.</p>
       </section>
