--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section id="main_content" class="inner">
         <h3>
 <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
-
+<p> Hi, I am a Software Developer from Toronto, Canada interested in Data Science, Economics, Literature, and Food. </p>
 <p>This domain is primarily used for personal purposes.</p>
 
 <p><a href="https://github.com/idreeskhan" class="user-mention">@idreeskhan</a>, Copyright (c) 2014.</p>
