--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
 
           <h1 id="project_title">Idrees Khan</h1>
-          <h2 id="project_tagline">Toronto-based Software Developer</h2>
+          <h2 id="project_tagline">Software Developer</h2>
 
         </header>
     </div>
@@ -28,10 +28,9 @@
       <section id="main_content" class="inner">
         <h3>
 <a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
-<p> Hi, I am a Software Developer from Toronto, Canada interested in Data Science, Economics, Literature, and Food. </p>
 <p>This domain is primarily used for personal purposes.</p>
 
-<p><a href="https://github.com/idreeskhan" class="user-mention">@idreeskhan</a>, Copyright (c) 2014.</p>
+<p><a href="https://github.com/idreeskhan" class="user-mention">@idreeskhan</a>, Copyright (c) 2018.</p>
       </section>
     </div>
 
